--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "@mui/system": "^7.3.3",
+    "@mui/utils": "^7.3.3",
     "algoliasearch": "^5.40.1",
     "chart.js": "^4.5.1",
+    "emotion": "^11.0.0",
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.546.0",
